--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </aside>
         
         <aside class="aside aside-2">
-            <img src="images/image.png">
+            <img src="/images/image.png">
         </aside>
         
         <section class="cta">
